Fix gif alignment

--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,7 @@ h1 {
       margin-top: 10px; /* Adjust margin to separate from content */
   }
 }
+
+.rat {
+  text-align: center;
+}
